--- a/all/themes/pixelgarage/less/pxlComponents/block-exposed-search-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-exposed-search-course-times.less
@@ -9,8 +9,15 @@
 // Mixins
 // -------------------------
 .modal() {
+  height: 100%;
+  overflow-y: hidden;
+
   .modal-backdrop {
+    position:fixed;
+    top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #222;
 
     &.in {
@@ -21,6 +28,7 @@
   .modal-dialog {
     margin: 0 auto;
     width: 100%;
+    height: 100%;
 
     .admin-menu & {
       margin: 29px auto 0;
@@ -28,6 +36,7 @@
 
     .modal-content {
       position: relative;
+      height: 100%;
       padding: 0;
       #pxl-mixins.border-radius(0);
       border: none;
@@ -83,8 +92,9 @@
 //
 // modal search dialog
 body.modal-open {
-  position: absolute;
   overflow: hidden;
+  // prevent background from scrolling on mobile devices
+  //position: fixed; // causes to jump on top of page, which is not wished for masonry view
   -webkit-overflow-scrolling: touch;
 
   #modal-exposed-search-form {
